[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barchartFetcher"
version = "0.1.0"
description = "Client utilities for fetching market data from Barchart"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "pandas",
    "nest_asyncio",
]

[project.urls]
Homepage = "https://github.com/nndjoli/barchartFetcher"